# AI-Drivern-Development----30-Day-Challenge

./: AIDD-Task-1.docx  README.md
AIDD-Task-4/: .gitignore  agent.py  main.py  pyproject.toml  requirements.txt
AIDD-Task-4/.streamlit/: config.toml
AIDD-Task-4/task-4/: prompt.txt
AIDD-Task-5/: README.md
AIDD-Task-7/: README.md
AIDD-Task-8/: .gitignore  pyproject.toml
AIDD-Task-8/.gemini/commands/: sp.adr.toml  sp.constitution.toml  sp.specify.toml
AIDD-Task-8/.specify/memory/: constitution.md
AIDD-Task-8/.specify/templates/: plan-template.md  tasks-template.md
AIDD-Task-8/history/prompts/constitution/: 0001-initialize-simple-calculator-constitution.constitution.prompt.md  1-establish-project-constitution-for-simple-calculator.constitution.prompt.md  1-update-constitution-for-simple-calculator.constitution.prompt.md
AIDD-Task-8/history/prompts/simple-calculator/: 0001-generate-simple-calculator-specification.spec.prompt.md  0001-generate-simple-calculator-tasks.tasks.prompt.md  (+2 more)
AIDD-Task-8/specs/002-simple-calculator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
AIDD-Task-8/src/: main.py
AIDD-Task-8/src/calculator/: __init__.py  operations.py
AIDD-Task-8/tests/integration/: test_cli.py
AIDD-Task-8/tests/unit/: test_operations.py
AIDD-Task-9-and-10/: README.md
AIDD-Task-9-and-10/.claude/agents/: Editing-Sub-Agent.md  Orchestrator-Agent.md  Research-Agent.md  Writing-Sub-Agent.md
specs/001-simple-calculator/: spec.md
specs/001-simple-calculator/checklists/: requirements.md
(+6 files in other folders)
