[project]
name = "aidd-task-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.8.1",
    "openai-agents>=0.6.1",
    "pyarrow>=22.0.0",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.50.0",
]
